--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textMultiLine"
+        android:onClick="Add"
         tools:layout_editor_absoluteX="25dp"
         tools:layout_editor_absoluteY="149dp"
         android:layout_below="@+id/textView"
@@ -37,6 +38,7 @@
 
     <EditText
         android:id="@+id/editText2"
+        android:onClick="Sub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
